fixed portfolio section not adjusting properly on mobile devices

--- a/portfolioPage.css
+++ b/portfolioPage.css
@@ -162,7 +162,6 @@ a {
 
 .panel {
   width: 100%;
-  max-height: 100%;
   min-height: 120vh;
 }
 
